--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      overflow: auto;
+      overflow-x: hidden;
       flex-direction: column;
     }
 
@@ -36,7 +36,7 @@
       text-align: center;
       z-index: 2;
       padding: 20px;
-      max-width: 800px;
+      max-width: 1000px;
     }
 
     .logo-text {
@@ -76,11 +76,19 @@
 
     .about-section {
       margin-top: 40px;
-      text-align: left;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
       background-color: rgba(0, 240, 255, 0.05);
       border: 1px solid #00f0ff;
       border-radius: 10px;
       padding: 20px;
+    }
+
+    .about-text {
+      flex: 1;
+      min-width: 250px;
+      padding-right: 20px;
     }
 
     .about-section h2 {
@@ -93,6 +101,25 @@
       font-size: 14px;
       color: #ccc;
       line-height: 1.5;
+    }
+
+    .about-img {
+      flex: 0 0 150px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .about-img img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid #00f0ff;
+    }
+
+    .about-links {
+      margin-top: 10px;
     }
 
     .about-links a {
@@ -121,6 +148,22 @@
       color: #00f0ff;
       text-decoration: none;
     }
+
+    @media (max-width: 768px) {
+      .about-section {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+
+      .about-text {
+        padding-right: 0;
+      }
+
+      .about-img {
+        margin-top: 20px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -129,9 +172,9 @@
     <div class="logo-text">SUPPORT.<span style="color: white">mad1fy</span></div>
     <div class="subtitle">Cybersecurity Support & Ethical Hacking</div>
     <div class="subtitle">Tech & Hardware/Software Support</div>
-    
+
     <div class="need-help">Need help? Message us through any of the links below or email us directly.</div>
-    
+
     <div class="social-icons">
       <a href="https://instagram.com/support.mad1fy" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="mailto:mad1fycybersec@gmail.com"><i class="fas fa-envelope"></i></a>
@@ -139,25 +182,29 @@
     </div>
 
     <div class="about-section">
-      <h2>About mad1fy</h2>
-      <p>I'm Seif Abdelrahman Askar, also known as <strong>mad1fy</strong> — a tech specialist, cybersecurity enthusiast, and problem solver based in Egypt. I help people with ethical hacking, hardware fixes, software issues, and provide digital protection along with defending from attacks.</p>
-      <p>You can explore more of my work and projects on my main website and social links below.</p>
-      <div class="about-links">
-        <a href="https://mad1fyjourn3y.github.io/" target="_blank">🌐 Main Website</a>
-        <a href="https://github.com/mad1fyjourn3y" target="_blank">💻 GitHub</a>
-        <a href="https://instagram.com/mad1fy_" target="_blank">📸 Instagram</a>
-        <a href="mailto:mad1fycybersec@gmail.com">✉️ Email</a>
+      <div class="about-text">
+        <h2>About mad1fy</h2>
+        <p>I'm Seif Abdelrahman Askar, also known as <strong>mad1fy</strong> — a tech specialist, cybersecurity enthusiast, and problem solver based in Egypt. I help people with ethical hacking, hardware fixes, software issues, and provide digital protection along with defending from attacks.</p>
+        <p>You can explore more of my work and projects on my main website and social links below.</p>
+        <div class="about-links">
+          <a href="https://mad1fyjourn3y.github.io/" target="_blank">🌐 Main Website</a>
+          <a href="https://github.com/mad1fyjourn3y" target="_blank">💻 GitHub</a>
+          <a href="https://instagram.com/mad1fy_" target="_blank">📸 Instagram</a>
+          <a href="mailto:mad1fycybersec@gmail.com">✉️ Email</a>
+        </div>
+      </div>
+      <div class="about-img">
+        <img src="https://i.postimg.cc/gJtBQh63/IMG-20250417-WA0004.jpg" alt="mad1fy profile picture">
       </div>
     </div>
   </div>
 
   <footer>
-    &copy; 2025 SUPPORT.mad1fy | 
-    <a href="mailto:mad1fycybersec@gmail.com">mad1fycybersec@gmail.com</a> | 
+    &copy; 2025 SUPPORT.mad1fy |
+    <a href="mailto:mad1fycybersec@gmail.com">mad1fycybersec@gmail.com</a> |
     <a href="https://wa.me/201121864109" target="_blank">01121864109</a>
   </footer>
 
-  <!-- particles.js script -->
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script>
     particlesJS("particles-js", {
