--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
       font-family: 'Orbitron', sans-serif;
       background-color: #000;
       color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
       overflow-x: hidden;
-      flex-direction: column;
     }
 
     #particles-js {
@@ -33,10 +29,30 @@
     }
 
     .container {
-      text-align: center;
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 0 20px 60px;
       z-index: 2;
-      padding: 20px;
-      max-width: 1000px;
+      position: relative;
+    }
+
+    .startup-screen {
+      height: 100vh; /* Full viewport height */
+      display: flex;
+      flex-direction: column;
+      justify-content: center; /* vertical center */
+      align-items: center;     /* horizontal center */
+      transform-origin: center center;
+      padding: 0 10px;
+      /* Slightly zoomed out to fit smaller screens */
+      transform: scale(0.9);
+      text-align: center;
+    }
+
+    @media (max-width: 480px) {
+      .startup-screen {
+        transform: scale(0.85); /* More zoom out on very small phones */
+      }
     }
 
     .logo-text {
@@ -76,55 +92,37 @@
 
     .about-section {
       margin-top: 40px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
+      text-align: left;
       background-color: rgba(0, 240, 255, 0.05);
       border: 1px solid #00f0ff;
       border-radius: 10px;
       padding: 20px;
-    }
-
-    .about-text {
-      flex: 1;
-      min-width: 250px;
-      padding-right: 20px;
+      display: flex;
+      align-items: center;
+      gap: 20px;
     }
 
     .about-section h2 {
       color: #00f0ff;
       font-size: 24px;
       margin-bottom: 10px;
+      flex-shrink: 0;
+    }
+
+    .about-text {
+      flex: 1;
     }
 
     .about-section p {
       font-size: 14px;
       color: #ccc;
       line-height: 1.5;
-    }
-
-    .about-img {
-      flex: 0 0 150px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .about-img img {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 2px solid #00f0ff;
-    }
-
-    .about-links {
-      margin-top: 10px;
+      margin: 4px 0;
     }
 
     .about-links a {
       display: inline-block;
-      margin: 5px 10px;
+      margin: 5px 10px 5px 0;
       color: #00f0ff;
       text-decoration: none;
       font-size: 14px;
@@ -132,6 +130,15 @@
 
     .about-links a:hover {
       text-decoration: underline;
+    }
+
+    .about-pfp {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      flex-shrink: 0;
+      order: 2; /* put on right */
     }
 
     footer {
@@ -148,37 +155,22 @@
       color: #00f0ff;
       text-decoration: none;
     }
-
-    @media (max-width: 768px) {
-      .about-section {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-      }
-
-      .about-text {
-        padding-right: 0;
-      }
-
-      .about-img {
-        margin-top: 20px;
-      }
-    }
   </style>
 </head>
 <body>
   <div id="particles-js"></div>
   <div class="container">
-    <div class="logo-text">SUPPORT.<span style="color: white">mad1fy</span></div>
-    <div class="subtitle">Cybersecurity Support & Ethical Hacking</div>
-    <div class="subtitle">Tech & Hardware/Software Support</div>
 
-    <div class="need-help">Need help? Message us through any of the links below or email us directly.</div>
-
-    <div class="social-icons">
-      <a href="https://instagram.com/support.mad1fy" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="mailto:mad1fycybersec@gmail.com"><i class="fas fa-envelope"></i></a>
-      <a href="https://wa.me/201121864109" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    <div class="startup-screen">
+      <div class="logo-text">SUPPORT.<span style="color: white">mad1fy</span></div>
+      <div class="subtitle">Cybersecurity Support & Ethical Hacking</div>
+      <div class="subtitle">Tech & Hardware/Software Support</div>
+      <div class="need-help">Need help? Message us through any of the links below or email us directly.</div>
+      <div class="social-icons">
+        <a href="https://instagram.com/support.mad1fy" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="mailto:mad1fycybersec@gmail.com"><i class="fas fa-envelope"></i></a>
+        <a href="https://wa.me/201121864109" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      </div>
     </div>
 
     <div class="about-section">
@@ -193,18 +185,17 @@
           <a href="mailto:mad1fycybersec@gmail.com">✉️ Email</a>
         </div>
       </div>
-      <div class="about-img">
-        <img src="https://i.postimg.cc/gJtBQh63/IMG-20250417-WA0004.jpg" alt="mad1fy profile picture">
-      </div>
+      <img src="https://i.postimg.cc/gJtBQh63/IMG-20250417-WA0004.jpg" alt="mad1fy profile picture" class="about-pfp" />
     </div>
   </div>
 
   <footer>
-    &copy; 2025 SUPPORT.mad1fy |
-    <a href="mailto:mad1fycybersec@gmail.com">mad1fycybersec@gmail.com</a> |
+    &copy; 2025 SUPPORT.mad1fy | 
+    <a href="mailto:mad1fycybersec@gmail.com">mad1fycybersec@gmail.com</a> | 
     <a href="https://wa.me/201121864109" target="_blank">01121864109</a>
   </footer>
 
+  <!-- particles.js script -->
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script>
     particlesJS("particles-js", {
